src/test/resources/org/xmlcml/www/convention/molecular/invalid/bond-must-be-child-of-bondArray.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml xmlns="http://www.xml-cml.org/schema"
     xmlns:dc="http://purl.org/dc/elements/1.1/"
     xmlns:conventions="http://www.xml-cml.org/convention/"
     convention="conventions:molecular">
    <dc:title>test file for http://www.xml-cml.org/conventions/molecular convention</dc:title>
    <dc:description>bond MUST be child of bondArray</dc:description>
    <dc:author>J A Townsend</dc:author>
    <dc:rights>Copyright J A Townsend jat45@cantab.net 2009.</dc:rights>
    <dc:date>2011-04-05</dc:date>
    <molecule id="m1">
        <atomArray>
            <atom id="a1" elementType="Du" />
            <atom id="a2" elementType="R" />
        </atomArray>
        <bond id="b1" order="S" atomRefs2="a1 a2" />
    </molecule>
</cml>

